--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ sqlitedatabase
 MySQLdb
 psycopg2-binary
 openpyxl
+from pymongo import MongoClient, errors
+from bson.objectid import ObjectId
+from bson import errors as beerrors
+redis
